--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title></title>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.0.0.js"></script>
     <link href="Styles/styles.css" rel="stylesheet" />
+    <script src="Scripts/utils.js"></script>
     <script src="Scripts/groot.js"></script>
 </head>
 <body>
